docs: fix docs heading alignment

--- a/adev/shared-docs/components/viewers/docs-viewer/docs-viewer.component.scss
+++ b/adev/shared-docs/components/viewers/docs-viewer/docs-viewer.component.scss
@@ -62,6 +62,7 @@
         // This can be useful on mobile if the heading contains a long code block
         overflow: hidden;
         text-overflow: ellipsis;
+        vertical-align: middle;
       }
     }
   }
